--- a/admin/css/swiftxr-viewer-admin.css
+++ b/admin/css/swiftxr-viewer-admin.css
@@ -12,7 +12,7 @@
 
  .swiftxr-card{
     border-radius: 5px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 4px 8px 0px;
     padding: 15px;
     background-color: #fff;
 
@@ -29,6 +29,19 @@
     opacity: 1;
  }
 
+ .swiftxr-card h4 {
+    font-size: 18px;
+    margin: 0;
+    font-weight: 500;
+    opacity: 1;
+ }
+
+ .swiftxr-card p {
+    font-size: 14px;
+    margin: 0;
+    font-weight: 400;
+ }
+
  .text-wrap{
     display: flex;
     justify-content: space-between;
@@ -38,6 +51,9 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    position: relative;
+    /* max-width: 800px; */
+    /* justify-content: center; */
  }
 
  .swiftxr-custom-number-input{
@@ -80,7 +96,7 @@
  .swiftxr-text-muted{
     margin: 0;
     opacity: .8;
- }
+}
 
  .shortcode-id {
     width: 50px;
@@ -102,3 +118,250 @@
  .swiftxr-card-dimension >div > h5 {
     font-size: 14px;
  }
+
+.swiftxr-sub-header{
+   margin: 0;
+   font-size: 16px;
+}
+
+#swiftxr-helper-text {
+   display: none;
+}
+
+.main-card{
+   display: grid;
+   grid-template-columns: 1fr 150px;
+   column-gap: 10px;
+}
+
+.main-card > div{
+   display: flex;
+   flex-direction: column;
+   row-gap: 10px;
+}
+
+.main-card img{
+   max-width: 100%;
+   max-height: 100%;
+}
+
+.main-card h5{
+   font-weight: 600;
+}
+
+.swiftxr-header{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   /* position: fixed; */
+   /* background-color: #ffffff; */
+   width: 100%;
+   height: max-content;
+   padding: 10px 0px;
+   /* top: 0; */
+   /* left: 0; */
+}
+
+.swiftxr-header h1{
+   margin: 0;
+   padding: 0;
+}
+
+.swiftxr-header-close {
+   justify-content: start !important;
+   column-gap: 10px;
+}
+
+.swiftxr-header > div{
+   display: flex;
+   column-gap: 10px;
+}
+
+.swiftxr-toggle {
+   position: relative;
+   display: inline-block;
+   width: 48px;
+   height: 28px;
+   
+}
+
+.swiftxr-toggle input[type="checkbox"] {
+   opacity: 0;
+   width: 0;
+   height: 0;
+}
+
+.swiftxr-toggle .swiftxr-slider {
+   position: absolute;
+   cursor: pointer;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: #ccc;
+   -webkit-transition: .2s;
+   transition: .2s;
+   border-radius: 14px;
+}
+
+.swiftxr-toggle input[type="checkbox"]:checked+.swiftxr-slider {
+   background-color: #0084e3;
+}
+
+.swiftxr-toggle .swiftxr-slider:before {
+   position: absolute;
+   content: "";
+   height: 20px;
+   width: 20px;
+   left: 4px;
+   bottom: 4px;
+   background-color: white;
+   -webkit-transition: .2s;
+   transition: .2s;
+   border-radius: 50%;
+}
+
+.swiftxr-toggle input[type="checkbox"]:checked+.swiftxr-slider:before {
+   -webkit-transform: translateX(20px);
+   -ms-transform: translateX(20px);
+   transform: translateX(20px);
+}
+
+.swiftxr-toggle-parent{
+   display: flex;
+   column-gap: 10px;
+   align-items: center;
+   /* justify-content: center; */
+}
+
+.swiftxr-toggle-parent > p{
+   margin: 0;
+   opacity: .8;
+   font-size: 13px;
+}
+
+.swiftxr-modal{
+   position: fixed;
+   width: 100vw;
+   height: 100vh;
+   top: 0;
+   left: 0;
+   background-color: #1b1b1b80;
+   padding: 50px;
+   display: flex;
+   justify-content: center;
+}
+
+.swiftxr-modal .modal-content{
+   background-color: #ffffff;
+   border-radius: 5px;
+   height: max-content;
+   max-height: 80%;
+   width: 100%;
+   max-width: 500px;
+
+   display: grid;
+   grid-template-rows: max-content 1fr max-content;
+   
+}
+.swiftxr-modal .modal-header {
+   display: flex;
+   justify-content: space-between;
+   column-gap: 10px;
+   padding: 15px;
+   border-bottom: 1px solid #dedede;
+}
+
+.swiftxr-modal .modal-header h1{
+   font-size: 20px;
+   margin: 0;
+   padding: 0;
+}
+
+.swiftxr-modal .modal-footer{
+   display: flex;
+   justify-content: end;
+   column-gap: 10px;
+   padding: 15px;
+   border-top: 1px solid #dedede;
+}
+
+.swiftxr-modal .modal-body{
+   padding: 15px;
+
+   display: flex;
+   flex-direction: column;
+   row-gap: 20px;
+   /* height: 100%; */
+   overflow: hidden;
+}
+
+.swiftxr-modal .input-group{
+   display: grid;
+   grid-template-columns: max-content 1fr max-content;
+   border: 1px solid #dedede;
+   border-radius: 5px;
+}
+
+.swiftxr-modal .input-group > span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
+  padding: 10px;
+}
+
+.swiftxr-modal .modal-body-content{
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-auto-rows: max-content;
+   row-gap: 5px;
+   height: 100%;
+   overflow-y: auto;
+}
+
+.swiftxr-product-item{
+   display: flex;
+   column-gap: 10px;
+   background-color: #f8f9fa;
+   border-radius: 5px;
+   border: 1px solid #dedede;
+   padding: 10px;
+   align-items: center;
+   cursor: pointer;
+   height: 50px;
+}
+
+.swiftxr-product-item  img{
+   max-height: 100%;
+}
+
+.swiftxr-product-item p {
+   margin: 0;
+   padding: 0;
+   font-size: 16px;
+}
+
+.swiftxr-hide{
+   display: none;
+}
+
+.swiftxr-table th{
+   font-weight: 500;
+}
+
+.swiftxr-modal-close{
+   background-color: transparent;
+   cursor: pointer;
+   border: none;
+   font-size: 16px;
+   background-color: #f8f9fa;
+   color: #000000;
+   font-weight: 500;
+}
+
+.swiftxr-modal-close:hover {
+   opacity: .8;
+}
